--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -80,6 +80,14 @@ body {
   box-sizing: border-box;
 }
 
+button {
+	&:hover {
+		cursor: pointer;
+	}
+}
+
+
+
 // Custom colors
 $link: silver;
 $link--blue: #2e76cf;
