--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,10 @@
 @import './utils';
 
+body {
+  padding: 0;
+  margin: 0;
+}
+
 .main {
   background-color: $white;
   min-height: 100vh;
@@ -31,10 +36,15 @@
       color: $shadow--light;
     }
 
-    & h3 {
+    & ul {
+      line-height: 1rem;
+    }
+
+    & li {
       font-family: 'Rokkitt', serif;
       font-size: 2.7rem;
-      line-height: 4rem;
+      line-height: 2.9rem;
+      margin-left: 7rem;
     }
   }
 
@@ -48,18 +58,21 @@
 
 .uploader {
   &__container {
-    height: 12rem;
     background-color: $shadow--light;
   }
 
   &__box {
-    padding: 4rem 2rem;
+    padding: 0 0 1.5rem;
+    display: grid;
+    grid-template-columns: 1fr;
     text-align: center;
 
-    & h4 {
-      text-transform: uppercase;
-      font-size: .8rem;
-      color: $white;
+    & input[type="file"] {
+        color: $nav--green;
+
+        &:hover {
+          cursor: pointer;
+        }
     }
   }
 
@@ -72,8 +85,39 @@
     border: none;
     border-radius: .4rem;
     padding: .5rem 1rem;
-    margin: 1rem;
-    min-width: 8rem;
+    margin: .6rem;
+    width: 8rem;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  &__label {
+    padding: 1rem;
+    font-family: 'Share Tech', sans-serif;
+    color: $white;
+    font-size: 2.1rem;
+    text-transform: uppercase;
+  }
+
+  &__browse {
+    padding-left: 18rem;
+    padding-bottom: .4rem;
+    text-align: center;
+    color: $white;
+  }
+
+  &__results-container {
+    border: solid .1rem $orange;
+  }
+
+  &__results-box {
+    border: solid .1rem $green;
+  }
+
+  &__results-img {
+    border: solid .1rem $blue;
   }
 }
 
@@ -194,4 +238,15 @@
     background-color: $red;
     color: $white;
   }
+}
+
+.cancel {
+  background-color: $orange;
+}
+
+.results {
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  font-family: 'Rokkitt', sans-serif;
+  color: $white;
 }
