--- a/src/styles/utils.scss
+++ b/src/styles/utils.scss
@@ -1,91 +1,75 @@
 @mixin mediaquery ($breakpoint) {
+
 	@if $breakpoint == tiny {
     @media (max-width: 25em) { @content }; //400px
   };
 
-  @if $breakpoint == phone {
-    @media (max-width: 37.5em) { @content }; //600
+
+	@if $breakpoint == minphone {
+    @media (max-width: 27em) { @content }; //432px
   };
 
-	@if $breakpoint == phoneland {
-    @media (max-width: 49.5em) and (orientation: landscape){ @content }; //792
+	@if $breakpoint == gal9 {
+    @media (width: 360px ) and (height: 740px ) and (-webkit-device-pixel-ratio : 4) { @content }; //Galaxys9
   };
+
+	@if $breakpoint == minlargephone {
+    @media (min-width: 27em) { @content }; //432
+  };
+
+	@if $breakpoint == pixel2XL {
+		@media (width: 411px ) and (height: 823px ) { @content }; //Pixel2XL
+	};
 
 	@if $breakpoint == iphonex {
-    @media (width: 375px ) and (height: 812px ) and (-webkit-device-pixel-ratio : 3) { @content }; //600
+    @media (width: 375px )  and (-webkit-device-pixel-ratio : 3) { @content }; //600  ...and (height: 812px)
   };
 
-
-  @if $breakpoint == tabport {
-    @media (max-width: 56.25em) { @content }; //900
+	@if $breakpoint == minphoneland {
+    @media (min-width: 37em) { @content }; //592
   };
 
-	@if $breakpoint == tabipad {
-    @media (min-width: 47em) and (max-width: 49em) and (orientation: portrait) { @content };
+	@if $breakpoint == mintabport {
+    @media (min-width: 47em) { @content }; //752
   };
 
-  @if $breakpoint == tabland {
-    @media (max-width: 75em) { @content }; //1200
+	@if $breakpoint == mintabland {
+    @media (min-width: 57em) { @content }; //912
   };
 
-	@if $breakpoint == landipad {
-    @media (width: 64em) and (orientation: landscape) { @content }; //1200
+	@if $breakpoint == minipadland {
+    @media (min-width: 63.9em) { @content }; //1022
   };
 
+  @if $breakpoint == desktop {
+    @media (min-width: 72em) { @content }; //1152
+  };
 
-  @if $breakpoint == bigpic {
-    @media (min-width: 75em) { @content }; //1200
+	@if $breakpoint == biggerdesktop {
+    @media (min-width: 93em) { @content }; //1488
   };
 
 	@if $breakpoint == bigscreen {
     @media (min-width: 112.5em) { @content }; //1800+
   };
+
 }
 
-//base
-
-*,
-*::after,
-*::before {
-  box-sizing: inherit;
-  margin: 0;
-  padding: 0;
+@mixin lookBorder {
+  border: solid .1rem $orange;
 }
 
-html {
-  @include mediaquery (tabland) {
-    font-size: 56.25%;
-  };
-
-  @include mediaquery (tabport) {
-    font-size: 40%;
-  };
-
-  @include mediaquery (phone) {
-    font-size: 28%;
-  };
-
-  @include mediaquery (tiny) {
-  font-size: 30%;
-  };
-
-  @include mediaquery (bigscreen) {
-    font-size: 70%;
-  };
-
-  font-size: 62.5%;
+@mixin lookBorderBlue {
+	border: solid .1rem $blue;
 }
 
-body {
-  box-sizing: border-box;
+@mixin lookBorderGreen {
+	border: solid .1rem $green;
 }
 
-button {
-	&:hover {
-		cursor: pointer;
-	}
+@mixin lookBorderPurple {
+	border: solid .1rem $purple;
 }
-
 
 
 // Custom colors
@@ -109,6 +93,7 @@ $aboutImage-bg: #F0F5F7;
 $tree: #4d544f;
 $candle: #fffcbb;
 $leaf--green: #3d583d;
+$robeViolet: #6d619d;
 
 
 //Utility colors
